Fixed issue with image loading inside the JAR